tests/ui/custom_test_frameworks/mismatch.stderr
error[E0277]: the trait bound `TestDescAndFn: Testable` is not satisfied
  --> $DIR/mismatch.rs:11:1
   |
LL | #[test]
   | ------- in this procedural macro expansion
LL | fn wrong_kind(){}
   | ^^^^^^^^^^^^^^^^^ the trait `Testable` is not implemented for `TestDescAndFn`
   |
   = note: required for the cast from `&TestDescAndFn` to `&dyn Testable`
   = note: this error originates in the attribute macro `test` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
   |
   = note: expected reference `&[&dyn Testable]`
              found reference `&[!; 1]`
note: function defined here
  --> $DIR/auxiliary/example_runner.rs:6:8
   |
LL | pub fn runner(tests: &[&dyn Testable]) {
   |        ^^^^^^

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0277, E0308.
For more information about an error, try `rustc --explain E0277`.
